// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev 1`] = `
Object {
  "mac": Array [],
}
`;

exports[`dev 2`] = `
Object {
  "AsarIntegrity": "{\\"checksums\\":{\\"app.asar\\":\\"jdsit4e4hjZ9aecrwjMGAzDfeiVsgi87181wRZFHzgCNdhOFZLQBiEEkRvLm5GqqdG7Ar4DWS28Td17EnL9prg==\\",\\"electron.asar\\":\\"ksFqQ3X5rccdlVaj4tOiH6w3EuU2r0+74T+bQ+jo2tynH+7xSMMPv5tfF5ATKsBaDNOQPZtxMsFwjBuUI8XgSw==\\"}}",
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "ElectronTeamID": "744739DJ4Y",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mas 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;

exports[`mas 2`] = `
Object {
  "AsarIntegrity": "{\\"checksums\\":{\\"app.asar\\":\\"jdsit4e4hjZ9aecrwjMGAzDfeiVsgi87181wRZFHzgCNdhOFZLQBiEEkRvLm5GqqdG7Ar4DWS28Td17EnL9prg==\\",\\"electron.asar\\":\\"ksFqQ3X5rccdlVaj4tOiH6w3EuU2r0+74T+bQ+jo2tynH+7xSMMPv5tfF5ATKsBaDNOQPZtxMsFwjBuUI8XgSw==\\"}}",
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "ElectronTeamID": "X8C9Z9L4HW",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mas and 7z 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.7z",
      "safeArtifactName": "TestApp-1.1.0-mac.7z",
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;

exports[`mas and 7z 2`] = `
Object {
  "AsarIntegrity": "{\\"checksums\\":{\\"app.asar\\":\\"jdsit4e4hjZ9aecrwjMGAzDfeiVsgi87181wRZFHzgCNdhOFZLQBiEEkRvLm5GqqdG7Ar4DWS28Td17EnL9prg==\\",\\"electron.asar\\":\\"ksFqQ3X5rccdlVaj4tOiH6w3EuU2r0+74T+bQ+jo2tynH+7xSMMPv5tfF5ATKsBaDNOQPZtxMsFwjBuUI8XgSw==\\"}}",
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "ElectronTeamID": "X8C9Z9L4HW",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;
